retour des disparus des merges

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -212,7 +212,12 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Ce champ de saisie doit permettre à l'utilisateur d'entrer le nom du sous-dossier.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel sous-dossier du répertoire qui lui a été fourni.
 		\item Le menu de gestion de dossier doit proposer un bouton "Supprimer le dossier".
-		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.\textcolor{green}{description de la boite ? bouton oui/non ?}
+		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de confirmation de la suppression.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de dossier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.\textcolor{green}{ si le répertoire fourni n'existe pas ?}
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'utilisateur a fait un clic droit.
@@ -220,7 +225,11 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 		\item Faire un clic droit sur un fichier doit afficher un menu de gestion de fichier.
 		\item Le menu de gestion de fichier doit proposer un bouton "Supprimer le fichier".
 		\item Cliquer sur le bouton "Supprimer le fichier" doit afficher une boite de dialogue.
-		\item Le programme doit supprimer le fichier si l'administrateur confirme la boite de dialogue.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de fichier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 	\end{enumerate}
 	
 \paragraph{Communication réseau}
@@ -566,6 +575,11 @@ Si le client a été auparavant banni par le serveur.
 		\item Le programme doit permettre à l'administrateur de supprimer n'importe quel dossier sur le serveur.
 		\item Le menu de gestion de dossier doit proposer un bouton "Supprimer le dossier".
 		\item Cliquer sur le bouton "Supprimer le dossier" doit afficher une boite de dialogue demandant la confirmation de la suppression.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de dossier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 		\item Le programme doit permettre à l'administrateur de créer des fichiers dans n'importe quel dossier sur le serveur.
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'administrateur a fait un clic droit.
@@ -573,7 +587,11 @@ Si le client a été auparavant banni par le serveur.
 		\item Faire un clic droit sur un fichier doit afficher un menu de gestion de fichier
 		\item Le menu de gestion de fichier doit proposer un bouton "Supprimer le fichier".
 		\item Cliquer sur le bouton "Supprimer le fichier" doit afficher une boite de dialogue.
-		\item Le programme doit supprimer le fichier si l'administrateur confirme la boite de dialogue.
+		\begin{enumerate}[label=\arabic*.]
+			\item La boite de confirmation de la suppression de fichier doit proposer deux boutons, "Valider" et "Annuler".
+			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
+			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
+		\end{enumerate}
 	\end{enumerate}	
 	
 \paragraph{Communication réseau}
