ceci est un commit

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -146,13 +146,13 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 	\subparagraph{Fonctionnalité}
 	\begin{enumerate}
 		\item Le programme doit permettre à un client de se connecter sur le client FTP.
-		\item Le nom d'utilisateur et le mot de passe doivent être définis par l'administrateur du serveur. \textcolor{blue}{cf Authentification côté serveur}
+		\item Le nom d'utilisateur et le mot de passe doivent être définis par l'administrateur du serveur.
 		\item Le programme doit proposer un champ de texte éditable pour entrer un pseudo.
 		\item Le programme doit proposer un champ de texte éditable pour entrer mot de passe.
-		\item Le programme doit permettre d'envoyer les données d'authentification via un protocole sécurisé. \textcolor{blue}{cf Bouton envoyer}
-		\item Le programme doit envoyer le mot de passe crypté au serveur. \textcolor{blue}{cf Protocoles}
+		\item Le programme doit permettre d'envoyer les données d'authentification via un protocole sécurisé.
+		\item Le programme doit envoyer le mot de passe crypté au serveur.
 		\item Le programme doit indiquer le succès de la connexion à l'aide la phrase "Bonjour [pseudo]" présente dans la barre des menus.
-		\item Le programme doit indiquer si une erreur est survenue et son type. \textcolor{green}{Où l'utilisateur voit cette indication ?}
+		\item Le programme doit indiquer si une erreur est survenue et son type.
 		\item En cas d'erreur le programme doit indiquer l'erreur et redemander le mot de passe et/ou le login (en fonction de l'erreur survenue)
 		\item En cas d'erreur sur l'adresse du serveur le programme doit indiquer l'erreur et redemander l'adresse du serveur.
 		\item Le programme doit vérifier que l'adresse du serveur est une adresse IP V4.
@@ -164,7 +164,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 			\item Exemple avec la phrase suivante en cas de mauvais mot de passe "Erreur de mot de passe".
 			\item Exemple en cas de pseudo non reconnu "L'utilisateur entré est invalide".
 		\end{enumerate}
-		\item Le programme doit permettre l'auto-connexion au démarrage du programme, pour ce faire l'utilisateur pourra cocher une case. \textcolor{red}{où est cette case, diviser cet item en 2}
+		\item Le programme doit permettre l'auto-connexion au démarrage du programme, pour ce faire l'utilisateur pourra cocher une case.
 	\end{enumerate}
 
 \paragraph{Gestionnaire de marque-pages}
@@ -218,7 +218,7 @@ Les utilisateurs de notre programme peuvent être des professionnels aguerris co
 			\item Cliquer sur "Valider" doit supprimer le dossier puis fermer la boite de dialogue.
 			\item Cliquer sur "Annuler" doit fermer la boite de dialogue.
 		\end{enumerate}
-		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.\textcolor{green}{ si le répertoire fourni n'existe pas ?}
+		\item Le programme doit permettre à l'utilisateur de créer des fichiers dans n'importe quel sous-dossier du répertoire qui lui a été fourni.
 		\item Le menu de gestion de dossier doit proposer un bouton "Nouveau fichier vide".
 		\item Cliquer sur le bouton "Nouveau fichier vide" doit créer un fichier sans extension dans le dossier sur lequel l'utilisateur a fait un clic droit.
 		\item Le programme doit permettre à l'utilisateur de supprimer n'importe quel fichier dans les sous-dossiers du répertoire qui lui a été fourni.
@@ -379,7 +379,7 @@ Si le client a été auparavant banni par le serveur.
 	\begin{enumerate}
 		\item Le programme doit partager les sous-dossiers à partir de l'endroit où le programme a été lancé.
 		\item Le programme doit pouvoir partager un fichier avec plusieurs personnes.
-		\item \textcolor{red}{Le programme doit pouvoir bloquer l'accès à un sous-dossier d'un dossier partagé. }
+		\item Le programme doit pouvoir bloquer l'accès à un sous-dossier d'un dossier partagé.
 		\item Les fichiers partagés doivent être stockés sur le serveur.
 	\end{enumerate}
 	
@@ -928,5 +928,6 @@ Une documentation utilisateur complète doit être fournie avec le programme.
 \end{tabular}
 \egroup
 
+\section{Annexe}
 
 \end{document}
