--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -797,6 +797,13 @@ Un fichier d'historique des événements, appelé aussi fichier "log", permettra
 
 \subsection{Spécification des cas d’utilisation}
 
+\subsubsection{Diagramme de cas d'utilisation}
+
+\begin{center}
+	\includegraphics[scale=0.5]{Ressources/Client.png}\\
+	\includegraphics[scale=0.5]{Ressources/Serveur.png}
+\end{center}
+
 
 \subsubsection{Utilisabilité}
 	\begin{enumerate}
