ajout du schéma

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -107,7 +107,7 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 
 \section{Description générale}
 
-Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Il pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.
+Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Il pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.\\
 
 \subsection{Perspectives du produit}
 
@@ -906,5 +906,8 @@ Une documentation utilisateur complète doit être fournie avec le programme.
 
 
 \section{Annexes}
-
+\subsection{Architecture du système KouldNotShare}
+\begin{center}
+\includegraphics[scale=0.8]{../Logo/doc_exigence.png}
+\end{center}
 \end{document}
