y a un noob qui sait pas faire des listes de definition mais je ne siterais pas son nom parce que kevin a le droit a l'annonymat

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -98,8 +98,8 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 \item[Protocole] Spécification de plusieurs règles pour un type de communication particulier.
 \item[Client] Logiciel qui envoie des demandes à un serveur.
 \item[Serveur] Dispositif informatique matériel ou logiciel qui offre des services, à différents clients.
-\item Downloader : Nous utilisons ce terme par abus de langage, cela est équivalent à "télécharger".
-\item Uploader : Nous utilisons ce terme par abus de langage, cela est équivalent à "téléverser".
+\item[Downloader] Anglicisme du mot "télécharger".
+\item[Uploader] Anglicisme du mot "téléverser".
 \end{description}
 
 
