maj ressources exigences

--- a/Document_des_exigences/Document_des_exigences_V_KB.tex
+++ b/Document_des_exigences/Document_des_exigences_V_KB.tex
@@ -938,7 +938,7 @@ Une documentation utilisateur complète doit être fournie avec le programme.
 \section{Annexe}
 \subsection{Architecture du système KouldNotShare}
 \begin{center}
-\includegraphics[scale=0.8]{../Logo/doc_exigence.png}
+\includegraphics[scale=0.8]{Ressources/doc_exigence.png}
 \end{center}
 
 \end{document}
