separation serveur/client CTR

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -89,7 +89,8 @@
 
 \newgeometry{top=2cm, bottom=2cm, left=2cm, right=2cm}
 
-\section{Authentification}
+\section{Tests Client}
+\subsection{Authentification}
 \begin{center}
 	\begin{tabular}{|c|c|c|c|}
 		\hline
@@ -102,7 +103,7 @@
 	\end{tabular}
 \end{center}
 
-\section{Gestionnaire de marques-page}
+\subsection{Gestionnaire de marques-page}
 \begin{center}
 	\begin{tabular}{|c|c|c|c|}
 		\hline
@@ -115,4 +116,5 @@
 	\end{tabular}
 \end{center}
 
+\section{Tests Serveur}
 \end{document}
