maj, CTR, fichier de version, exigence à modifier

--- a/fichier_de_version.tex
+++ b/fichier_de_version.tex
@@ -25,12 +25,14 @@
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
       \hline
+      v1.0 & 20/10/14 & 03/11/14 & Rendu avec un retard annoncé de 3 jours.
     \end{tabular}
     
    \section*{Cahier des tests de recette}
     \begin{tabular}{|c|c|c|c|}
       \hline
       Version & Date creation & Date Rendu & Commentaires\\
+      v1.0 & 08/11/14 & 09/11/14 &
       \hline
     \end{tabular}  
     
