--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -5,14 +5,13 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{color}
+\usepackage{xcolor}
 \definecolor{gris}{rgb}{0.75,0.75,0.75}
 \usepackage{colortbl}
 \usepackage{enumitem}
 \usepackage{version}
 \usepackage{multirow}
 \usepackage[top=1cm, bottom=2cm, left=2cm, right=2cm]{geometry}
-
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 
@@ -29,6 +28,24 @@
 
 \makeatletter
 \renewcommand{\thesection}{\@arabic\c@section}
+\makeatother
+
+\makeatletter
+\def\chline#1{%
+  \noalign{\ifnum0=`}\fi\begingroup\color{#1}\hrule \@height \arrayrulewidth\endgroup \futurelet
+   \reserved@a\@xhline}
+\def\ccline#1#2{\@ccline#1\@nil#2\@nil}
+\def\@ccline#1-#2\@nil#3\@nil{%
+  \omit
+  \@multicnt#1%
+  \advance\@multispan\m@ne
+  \ifnum\@multicnt=\@ne\@firstofone{&\omit}\fi
+  \@multicnt#2%
+  \advance\@multicnt-#1%
+  \advance\@multispan\@ne
+  \begingroup\color{#3}\leaders\hrule\@height\arrayrulewidth\hfill\endgroup
+  \cr
+  \noalign{\vskip-\arrayrulewidth}}
 \makeatother
 
 \begin{document}
@@ -96,28 +113,28 @@
 \section{Tests Client}
 \subsection{Authentification}
 \begin{center}
-\bgroup
-\def\arraystretch{1.5}
+	\bgroup
+	\def\arraystretch{1.5}
 	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \\
-		\hline
-		AuthC.2 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion alors que le formulaire de connexion est ouvert.& Le bouton doit être grisé et ne doit rien déclencher. & \\
-		\hline
-		AuthC.3 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 & Ouvrir le pop-up de connexion. & Le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.2 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.3 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
 		\cline{1-2}\cline{4-5}
 		AuthC.4 & 3.1.1.1.1.9 3.1.1.1.1.10 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
 		\cline{1-2}\cline{4-5}
 		AuthC.5 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up & \\
-		\hline
-		AuthC.6 & 3.1.1.1.1.11 & Dans le pop-up de connexion, remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
-		\hline
-		AthC.7 & 3.1.1.1.2.1 & Dans le pop-up de connexion, remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.6 & 3.1.1.1.1.11 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AthC.7 & 3.1.1.1.2.1 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
 		\hline
 	\end{tabular}
-\egroup
+	\egroup
 \end{center}
 
 \begin{comment}
@@ -146,15 +163,20 @@
 
 \subsection{Gestionnaire de marques-page}
 \begin{center}
-	\begin{tabular}{|c|c|c|c|}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
 		\hline
-		\rowcolor{gris}Référence & Test & Résultat attendu & Résultat/Commentaires\\
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		 & & & \\
-		\hline
-		 & & & \\
-		\hline
+		GdmpC.1 & 3.1.1.2.1 3.1.1.2.2 & Ouvrir le logiciel. & Un menu déroulant "Bookmarks" est présent dans la barre d'action. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GdmpC.2 & 3.1.1.2.3 3.1.1.2.7& Dérouler le menu "Bookmarks". & Les boutons "Afficher les marque-pages" et "Mettre un marque-page" sont présents dans le menu. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		GdmpC.3 & 3.1.1.2.4 & Cliquer sur "Afficher les marque-pages". & un pop-up s'ouvre avec la liste des liens vers les serveurs affichés avec les noms des marque-pages & \\
+		\hline	
 	\end{tabular}
+	\egroup
 \end{center}
 
 \section{Tests Serveur}
