--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -174,6 +174,8 @@
 		GdmpC.2 & 3.1.1.2.3 3.1.1.2.7& Dérouler le menu "Bookmarks". & Les boutons "Afficher les marque-pages" et "Mettre un marque-page" sont présents dans le menu. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GdmpC.3 & 3.1.1.2.4 & Cliquer sur "Afficher les marque-pages". & un pop-up s'ouvre avec la liste des liens vers les serveurs affichés avec les noms des marque-pages & \\
+		\hline
+		GdmpC.4 & 3.1.1.2.7 & Cliquer sur "Mettre un marque-page" & \\
 		\hline	
 	\end{tabular}
 	\egroup
