--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -115,23 +115,23 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.2 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
+		AuthC.1.1 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.3 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
+		AuthC.1.2 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
 		\cline{1-2}\cline{4-5}
-		AuthC.4 & 3.1.1.1.1.9 3.1.1.1.1.10 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
+		AuthC.1.3 & 3.1.1.1.1.9 3.1.1.1.1.10 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
 		\cline{1-2}\cline{4-5}
-		AuthC.5 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up & \\
+		AuthC.1.4 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.6 & 3.1.1.1.1.11 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
+		AuthC.1.4.1 & 3.1.1.1.1.11 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.7 & 3.1.1.1.2.1 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
+		AuthC.1.4.2 & 3.1.1.1.2.1 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -141,25 +141,25 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 		GdmpC.1 & 3.1.1.2.1 3.1.1.2.2 & Ouvrir le logiciel. & Un menu déroulant "Bookmarks" est présent dans la barre d'action. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GdmpC.2 & 3.1.1.2.3 3.1.1.2.7& Dérouler le menu "Bookmarks". & Les boutons "Afficher les marque-pages" et "Mettre un marque-page" sont présents dans le menu. & \\
+		GdmpC.1.1 & 3.1.1.2.3 3.1.1.2.7& Dérouler le menu "Bookmarks". & Les boutons "Afficher les marque-pages" et "Mettre un marque-page" sont présents dans le menu. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GdmpC.3 & 3.1.1.2.4 & Cliquer sur "Afficher les marque-pages". & un pop-up s'ouvre avec la liste des liens vers les serveurs affichés avec les noms des marque-pages & \\
+		GdmpC.1.1.1 & 3.1.1.2.4 & Cliquer sur "Afficher les marque-pages". & un pop-up s'ouvre avec la liste des liens vers les serveurs affichés avec les noms des marque-pages & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GdmpC.4 & 3.1.1.2.8 & Cliquer sur "Mettre un marque-page". & Un champs de saisie "nom" et un case à cocher "enregistrer mot de passe" apparaissent dans une boite de dialogue. & \\
+		GdmpC.1.1.2 & 3.1.1.2.8 & Cliquer sur "Mettre un marque-page". & Un champs de saisie "nom" et un case à cocher "enregistrer mot de passe" apparaissent dans une boite de dialogue. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GdmpC.5 & 3.1.1.2.9 & Entrer un nom. & Le marque page est ajouté à la liste. & \\
+		GdmpC.1.1.2.1 & 3.1.1.2.9 & Entrer un nom. & Le marque page est ajouté à la liste. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		GdmpC.4 & 3.1.1.2.10 & Entrer un nom et cocher la case. & Le marque-page est ajouté à la liste et permet une connexion directe. & \\
+		GdmpC.1.1.2.2 & 3.1.1.2.10 & Entrer un nom et cocher la case. & Le marque-page est ajouté à la liste et permet une connexion directe. & \\
 		\hline
-		GdmpC.5 & 3.1.1.2.5 & Ouvrir le fichier des marque-pages. & Les marque-pages sont composés d'un nom, de l'adresse du serveur et de l'identifiant de l'utilisateur. & \\
+		GdmpC.2 & 3.1.1.2.5 & Ouvrir le fichier des marque-pages. & Les marque-pages sont composés d'un nom, de l'adresse du serveur et de l'identifiant de l'utilisateur. & \\
 		\cline{1-2}\cline{4-5}
-		GdmpC.6 & 3.1.1.2.6 & & Les marque-pages où le mot de passe est enregistré sont composé aussi du mot de passe crypté. & \\
+		GdmpC.2.1 & 3.1.1.2.6 & & Les marque-pages où le mot de passe est enregistré sont composé aussi du mot de passe crypté. & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -169,29 +169,57 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 		LimiC.1 & 3.1.1.3.1 & Ouvrir le logiciel. & Le menu déroulant "Configuration est présent dans la barre d'action. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.2 & 3.1.1.3.3 3.1.1.3.7 3.1.1.3.11 3.1.1.3.14 & Cliquer sur le menu déroulant "Configuration". & Les boutons "Limiter vitesse téléchargement", "Limiter vitesse téléversement", "Plages horaires téléchargement" et "Plages horaires téléversement" sont présent dans le menu déroulant. & \\
+		LimiC.1.1 & 3.1.1.3.3 3.1.1.3.7 3.1.1.3.11 3.1.1.3.14 & Cliquer sur le menu déroulant "Configuration". & Les boutons "Limiter vitesse téléchargement", "Limiter vitesse téléversement", "Plages horaires téléchargement" et "Plages horaires téléversement" sont présent dans le menu déroulant. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.3 & 3.1.1.3.4 3.1.1.3.5 & Cliquer sur "Limiter vitesse téléchargement". & Une boite de dialogue avec un curseur apparait. & \\
+		LimiC.1.1.1 & 3.1.1.3.4 3.1.1.3.5 & Cliquer sur "Limiter vitesse téléchargement". & Une boite de dialogue avec un curseur apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.4 & 3.1.1.3.2 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléchargement ne dépasse pas la limite fixée. & \\
+		LimiC.1.1.1.2 & 3.1.1.3.2 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléchargement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.5 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse téléversement". & Une boite de dialogue avec un curseur apparait. & \\
+		LimiC.1.1.2 & 3.1.1.3.8 3.1.1.3.9 & Cliquer sur "Limiter vitesse téléversement". & Une boite de dialogue avec un curseur apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.6 & 3.1.1.3.6 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléversement ne dépasse pas la limite fixée. & \\
+		LimiC.1.1.2.1 & 3.1.1.3.6 & Choisir une limite et valider la boite de dialogue. & La vitesse de téléversement ne dépasse pas la limite fixée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.7 & 3.1.1.3.12 & Cliquer sur "Plages horaires téléchargement". & Une boite de dialogue apparait avec la liste des heures du jours couplées à une case à cocher. & \\
+		LimiC.1.1.3 & 3.1.1.3.12 & Cliquer sur "Plages horaires téléchargement". & Une boite de dialogue apparait avec la liste des heures du jours couplées à une case à cocher. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.8 & 3.1.1.3.10 & Sélectionner des horaires et valider la boite de dialogue. & Aux heures sélectionnées le programme ne télécharge pas. & \\
+		LimiC.1.1.3.1 & 3.1.1.3.10 & Sélectionner des horaires et valider la boite de dialogue. & Aux heures sélectionnées le programme bloque le téléchargement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.7 & 3.1.1.3.15 & Cliquer sur "Plages horaires téléversement". & Une boite de dialogue apparait avec la liste des heures du jours couplées à une case à cocher. & \\
+		LimiC.1.1.4 & 3.1.1.3.15 & Cliquer sur "Plages horaires téléversement". & Une boite de dialogue apparait avec la liste des heures du jours couplées à une case à cocher. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiC.8 & 3.1.1.3.13 & Sélectionner des horaires et valider la boite de dialogue. & Aux heures sélectionnées le programme ne téléverse pas. & \\
+		LimiC.1.1.4.1 & 3.1.1.3.13 & Sélectionner des horaires et valider la boite de dialogue. & Aux heures sélectionnées le programme bloque le téléversement. & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsection{Utilisation des dossiers}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		UtdoC.1 & 3.1.1.4.1 & Ouvrir le logiciel. & L'arborescence des dossiers dont l'utilisateur a accès sur le serveur est affichée sur la droite de la fenêtre. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.2 & 3.1.1.4.2 3.1.1.4.3 & Cliquer sur les dossiers dans l'arborescence. & Les sous-dossiers et fichiers des dossiers sur lesquels on a cliqué sont affichés dans l'arborescence. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.3 & 3.1.1.4.5 3.1.1.4.6 3.1.1.4.10 3.1.1.4.13 & Faire un clic droit sur un dossier. & Un menu de gestion de dossier apparait, les boutons "Nouveau sous-dossier", "Supprimer le dossier", et "Nouveau fichier vide" sont disponible à l'intérieur. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.4 & 3.1.1.4.7 3.1.1.4.8 & Cliquer sur "Nouveau sous-dossier". & Une boite de dialogue apparait avec un champ de saisie "nom". & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.5 & 3.1.1.4.4 & Entrer un nom et valider la boite de dialogue. & Un nouveau sous-dossier avec le nom donné dans la boite de dialogue apparait dans l'arborescence. & \\
+		
+		
+		
+		
+		
+		
 		\hline
 	\end{tabular}
 	\egroup
