--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -201,30 +201,54 @@
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
-	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5cm}|}
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
 		UtdoC.1 & 3.1.1.4.1 & Ouvrir le logiciel. & L'arborescence des dossiers dont l'utilisateur a accès sur le serveur est affichée sur la droite de la fenêtre. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		UtdoC.2 & 3.1.1.4.2 3.1.1.4.3 & Cliquer sur les dossiers dans l'arborescence. & Les sous-dossiers et fichiers des dossiers sur lesquels on a cliqué sont affichés dans l'arborescence. & \\
+		UtdoC.1.1 & 3.1.1.4.2 3.1.1.4.3 & Cliquer sur les dossiers dans l'arborescence. & Les sous-dossiers et fichiers des dossiers sur lesquels on a cliqué sont affichés dans l'arborescence. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		UtdoC.3 & 3.1.1.4.5 3.1.1.4.6 3.1.1.4.10 3.1.1.4.13 & Faire un clic droit sur un dossier. & Un menu de gestion de dossier apparait, les boutons "Nouveau sous-dossier", "Supprimer le dossier", et "Nouveau fichier vide" sont disponible à l'intérieur. & \\
+		UtdoC.1.2 & 3.1.1.4.5 3.1.1.4.6 3.1.1.4.10 3.1.1.4.13 & Faire un clic droit sur un dossier. & Un menu de gestion de dossier apparait, les boutons "Nouveau sous-dossier", "Supprimer le dossier", et "Nouveau fichier vide" sont disponible à l'intérieur. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		UtdoC.4 & 3.1.1.4.7 3.1.1.4.8 & Cliquer sur "Nouveau sous-dossier". & Une boite de dialogue apparait avec un champ de saisie "nom". & \\
+		UtdoC.1.2.1 & 3.1.1.4.7 3.1.1.4.8 & Cliquer sur "Nouveau sous-dossier". & Une boite de dialogue apparait avec un champ de saisie "nom". & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		UtdoC.5 & 3.1.1.4.4 & Entrer un nom et valider la boite de dialogue. & Un nouveau sous-dossier avec le nom donné dans la boite de dialogue apparait dans l'arborescence. & \\
-		
-		
-		
-		
-		
-		
+		UtdoC.1.2.1.1 & 3.1.1.4.4 & Entrer un nom et valider la boite de dialogue. & Un nouveau sous-dossier avec le nom donné dans la boite de dialogue apparait dans l'arborescence. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2 & 3.1.1.4.11 3.1.1.4.11.1 & Cliquer sur "Supprimer le dossier". & Une boite de dialogue proposant un bouton "Valider" et un "Annuler" apparait. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2.1 & 3.1.1.4.9 3.1.1.4.11.2 & Cliquer sur "Valider". & La boite de dialogue disparait et le dossier est supprimé. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2.2 & 3.1.1.4.11.3 & Cliquer sur "Annuler". & La boite de dialogue disparait sans rien déclencher. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.3 & 3.1.1.4.12 3.1.1.4.14 & Cliquer sur "Nouveau fichier vide". & Un nouveau fichier "nouveau\_fichier" apparait dans le dossier. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		Utdoc.1.3 & 3.1.1.4.16 3.1.1.4.17 & Faire un clic droit sur un des fichiers dans l'arborescence. & Un menu de gestion de fichier apparait avec un bouton "Supprimer le fichier" à l'intérieur. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2 & 3.1.1.4.18 3.1.1.4.18.1 & Cliquer sur "Supprimer le fichier". & Une boite de dialogue proposant un bouton "Valider" et un "Annuler" apparait. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2.1 & 3.1.1.4.15 3.1.1.4.18.2 & Cliquer sur "Valider". & La boite de dialogue disparait et le dossier est supprimé. & \\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		UtdoC.1.2.2.2 & 3.1.1.4.18.3 & Cliquer sur "Annuler". & La boite de dialogue disparait sans rien déclencher. & \\
 		\hline
 	\end{tabular}
 	\egroup
 \end{center}
 
+\subsection{Communication réseau}
+\subsubsection{Procédure d'initialisation de la communication}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{2cm}|p{8cm}|p{8cm}|p{5.5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
 \section{Tests Serveur}
 \subsection{Authentification}
