--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -281,7 +281,13 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		& & & & \\
+		PafiS.1 & 3.1.2.2.1 & Crée un compte et essayer de partager des fichiers présent a partir de la racine. & Les fichiers ne doivent pas être accessible. & \\
+		\hline
+		PafiS.2 & 3.1.2.2.2 & Crée 2 comptes et partager un même fichier a ses 2 comptes & Se connecter sur les 2 comptes et vérifier l'accès aux fichiers. & \\
+		\hline
+		PafiS.3 & 3.1.2.2.3 & Crée un compte lui partager un fichier et bloqué l'accès a un sous dossier & Se connecter sur le compte crée, le fichier ne doit pas être présent dans la liste des fichiers. & \\
+		\hline
+		PafiS.4 & 3.1.2.2.4 & Ouvrir un explorateur de fichier sur le serveur & Les fichiers sont visible avec l'explorateur de fichier & \\
 		\hline
 	\end{tabular}
 	\egroup
