Add strcture doc

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -301,11 +301,64 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		GecuS.1 & 3.1.2.3.1 &  & & \\
+		\hline
+		GecuS.2 & 3.1.2.3.2 &  & & \\
+		\hline
+		GecuS.3 & 3.1.2.3.3 &  & & \\
+		\hline
+		GecuS.4 & 3.1.2.3.4 &  & & \\
+		\hline
+		GecuS.5 & 3.1.2.3.5 &  & & \\
+		\hline
+		GecuS.6 & 3.1.2.3.6 &  & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Bannissement d’un compte}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
 		& & & & \\
 		\hline
 	\end{tabular}
 	\egroup
 \end{center}
+
+\subsubsection{Bannissement temporaire}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Bannissement partiel}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 
 \subsection{Stockage des comptes}
 \begin{center}
@@ -321,6 +374,74 @@
 	\egroup
 \end{center}
 
+\subsubsection{Compte Administrateur}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
+\subsubsection{Comptes normaux}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Comptes temporaires}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Comptes bannis}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsubsection{Limitations}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		& & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
 \end{document}
