--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -325,7 +325,15 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BancS.1 & & & & \\
+		BancS.1 & 3.1.2.4.1 & & & \\
+		\hline
+		BancS.2 & 3.1.2.4.2 & & & \\
+		\hline
+		BancS.3 & 3.1.2.4.3 & & & \\
+		\hline
+		BancS.4 & 3.1.2.4.4 & & & \\
+		\hline
+		BancS.5 & 3.1.2.4.5 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -339,7 +347,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BantS.1 & & & & \\
+		BantS.1 & 3.1.2.5.1 & & & \\
+		\hline
+		BantS.2 & 3.1.2.5.2 & & & \\
+		\hline
+		BantS.3 & 3.1.2.5.3 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -353,7 +365,11 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BanpS.1 & & & & \\
+		BanpS.1 & 3.1.2.6.1 & & & \\
+		\hline
+		BanpS.2 & 3.1.2.6.2 & & & \\
+		\hline
+		BanpS.3 & 3.1.2.6.3 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -368,7 +384,13 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		StcS.1 & & & & \\
+		StcS.1 & 3.1.2.6.4.1 & & & \\
+		\hline
+		StcS.2 & 3.1.2.6.4.2 & & & \\
+		\hline
+		StcS.3 & 3.1.2.6.4.3 & & & \\
+		\hline
+		StcS.4 & 3.1.2.6.4.4 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -382,7 +404,23 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CoaS.1 & & & & \\
+		CoaS.1 & 3.1.2.6.5.1 & & & \\
+		\hline
+		CoaS.2 & 2.1.2.6.5.2 & & & \\
+		\hline
+		CoaS.3 & 3.1.2.6.5.3 & & & \\
+		\hline
+		CoaS.4 & 3.1.2.6.5.4 & & & \\
+		\hline
+		CoaS.5 & 3.1.2.6.5.5 & & & \\
+		\hline
+		CoaS.6 & 3.1.2.6.5.6 & & & \\
+		\hline
+		CoaS.7 & 3.1.2.6.5.7 & & & \\
+		\hline
+		CoaS.8 & 3.1.2.6.5.8 & & & \\
+		\hline
+		CoaS.9 & 3.1.2.6.5.9 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -396,7 +434,9 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		ConS.1 & & & & \\
+		ConS.1 & 3.1.2.6.6.1 & & & \\
+		\hline
+		ConS.2 & 3.1.2.6.6.2 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -410,7 +450,15 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CotS.1 & & & & \\
+		CotS.1 & 3.1.2.6.7.1 & & & \\
+		\hline
+		CotS.2 & 3.1.2.6.7.2 & & & \\
+		\hline
+		CotS.3 & 3.1.2.6.7.3 & & & \\
+		\hline
+		CotS.4 & 3.1.2.6.7.4 & & & \\
+		\hline
+		CotS.5 & 3.1.2.6.7.5 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -424,13 +472,21 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CobS.1 & & & & \\
+		CobS.1 & 3.1.2.6.8.1 & & & \\
+		\hline
+		CobS.2 & 3.1.2.6.8.2 & & & \\
+		\hline
+		CobS.3 & 3.1.2.6.8.3 & & & \\
+		\hline
+		CobS.4 & 3.1.2.6.8.4 & & & \\
+		\hline
+		CobS.5 & 3.1.2.6.8.5 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
 \end{center}
 
-\subsubsection{Limitations}
+\subsection{Limitations}
 \begin{center}
 	\bgroup
 	\def\arraystretch{1.5}
@@ -438,7 +494,97 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		LimiS.1 & & & & \\
+		LimiS.1 & 3.1.2.7.1 & & & \\
+		\hline
+		LimiS.2 & 3.1.2.7.2 & & & \\
+		\hline
+		LimiS.3 & 3.1.2.7.3 & & & \\
+		\hline
+		LimiS.4 & 3.1.2.7.4 & & & \\
+		\hline
+		LimiS.5 & 3.1.2.7.5 & & & \\
+		\hline
+		LimiS.6 & 3.1.2.7.6 & & & \\
+		\hline
+		LimiS.7 & 3.1.2.7.7 & & & \\
+		\hline
+		LimiS.8 & 3.1.2.7.8 & & & \\
+		\hline
+		LimiS.9 & 3.1.2.7.9 & & & \\
+		\hline
+		LimiS.10 & 3.1.2.7.10 & & & \\
+		\hline
+		LimiS.11 & 3.1.2.7.11 & & & \\
+		\hline
+		LimiS.12 & 3.1.2.7.12 & & & \\
+		\hline
+		LimiS.13 & 3.1.2.7.13 & & & \\
+		\hline
+		LimiS.14 & 3.1.2.7.14 & & & \\
+		\hline
+		LimiS.15 & 3.1.2.7.15 & & & \\
+		\hline
+		LimiS.16 & 3.1.2.7.16 & & & \\
+		\hline
+		LimiS.17 & 3.1.2.7.17 & & & \\
+		\hline
+		LimiS.18 & 3.1.2.7.18 & & & \\
+		\hline
+		LimiS.19 & 3.1.2.7.19 & & & \\
+		\hline
+		LimiS.20 & 3.1.2.7.20 & & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
+\subsection{Utilisation des dossiers}
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{1.5cm}|p{2cm}|p{8.5cm}|p{8.5cm}|p{5cm}|}
+		\hline
+		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
+		\hline
+		UtdoS.1 & 3.1.2.8.1 & & & \\
+		\hline
+		UtdoS.2 & 3.1.2.8.2 & & & \\
+		\hline
+		UtdoS.3 & 3.1.2.8.3 & & & \\
+		\hline
+		UtdoS.4 & 3.1.2.8.4 & & & \\
+		\hline
+		UtdoS.5 & 3.1.2.8.5 & & & \\
+		\hline
+		UtdoS.6 & 3.1.2.8.6 & & & \\
+		\hline
+		UtdoS.7 & 3.1.2.8.7 & & & \\
+		\hline
+		UtdoS.8 & 3.1.2.8.8 & & & \\
+		\hline
+		UtdoS.9 & 3.1.2.8.9 & & & \\
+		\hline
+		UtdoS.10 & 3.1.2.8.10 & & & \\
+		\hline
+		UtdoS.11 & 3.1.2.8.11 & & & \\
+		\hline
+		UtdoS.12 & 3.1.2.8.12 & & & \\
+		\hline
+		UtdoS.13 & 3.1.2.8.13 & & & \\
+		\hline
+		UtdoS.14 & 3.1.2.8.14 & & & \\
+		\hline
+		UtdoS.15 & 3.1.2.8.15 & & & \\
+		\hline
+		UtdoS.16 & 3.1.2.8.16 & & & \\
+		\hline
+		UtdoS.17 & 3.1.2.8.17 & & & \\
+		\hline
+		UtdoS.18 & 3.1.2.8.18 & & & \\
+		\hline
+		UtdoS.19 & 3.1.2.8.19 & & & \\
+		\hline
+		UtdoS.20 & 3.1.2.8.20 & & & \\
 		\hline
 	\end{tabular}
 	\egroup
